5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1646_2449.log
== TEST (2019-04-17 23:46:29) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = ((a*f-c*d)/(a*e-b*d))

if("x,y">0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:46:29) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = ((a*f-c*d)/(a*e-b*d))

if("x,y">0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:46:50) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = ((a*f-c*d)/(a*e-b*d))

if(x,y>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 23:47:00) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = ((a*f-c*d)/(a*e-b*d))

if(x,y>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.141519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:48:56) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if(x,y>0):
	print(x = (c*e-b*f)/(a*e-b*d))
	print(y = ((a*f-c*d)/(a*e-b*d)))
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x,y>0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:49:03) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if(x,y>0):
	print(x = (c*e-b*f)/(a*e-b*d))
	print(y = ((a*f-c*d)/(a*e-b*d)))
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x,y>0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 23:53:09) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if((x = (c*e-b*f)/(a*e-b*d)),(y = (a*f-c*d)/(a*e-b*d))>0):
	print(x)
	print(Y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 8
    if((x = (c*e-b*f)/(a*e-b*d)),(y = (a*f-c*d)/(a*e-b*d))>0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 00:01:29) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d/a*e-b*d)
if(x,y>0):
	print(x)
	print(Y)
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.168945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:03:26) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if((c*e-b*f)/(a*e-b*d), (a*f-c*d/a*e-b*d)>0):
	print(x)
	print(Y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if((c*e-b*f)/(a*e-b*d), (a*f-c*d/a*e-b*d)>0):
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:04:05) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if(x==(c*e-b*f)/(a*e-b*d),y==(a*f-c*d/a*e-b*d)>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x==(c*e-b*f)/(a*e-b*d),y==(a*f-c*d/a*e-b*d)>0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:04:19) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if(x=(c*e-b*f)/(a*e-b*d),y=(a*f-c*d/a*e-b*d)>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 8
    if(x=(c*e-b*f)/(a*e-b*d),y=(a*f-c*d/a*e-b*d)>0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:05:29) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if("x=(c*e-b*f)/(a*e-b*d)","y=(a*f-c*d/a*e-b*d)>0"):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:05:54) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if("x=(c*e-b*f)/(a*e-b*d)","y=(a*f-c*d/a*e-b*d)">0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if("x=(c*e-b*f)/(a*e-b*d)","y=(a*f-c*d/a*e-b*d)">0):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:06:22) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if(x=(c*e-b*f)/(a*e-b*d),y=(a*f-c*d/a*e-b*d)>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 8
    if(x=(c*e-b*f)/(a*e-b*d),y=(a*f-c*d/a*e-b*d)>0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:14:52) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))

if((x=c*e-b*f)/(a*e-b*d),(y=a*f-c*d/a*e-b*d)>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 8
    if((x=c*e-b*f)/(a*e-b*d),(y=a*f-c*d/a*e-b*d)>0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:16:01) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if((c*e-b*f)/(a*e-b*d),(a*f-c*d/a*e-b*d)>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 00:16:12) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("x:"))
d = float(input("d:"))
e = float(input("e:"))
f = float(input("f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if((c*e-b*f)/(a*e-b*d),(a*f-c*d/a*e-b*d)>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.192649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
